--- a/pom.xml
+++ b/pom.xml
@@ -5,4 +5,16 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>Bowling Kata</name>
   <description>Scoring for American Ten-Pin Bowling.</description>
+  <properties>
+     <maven.compiler.source>11</maven.compiler.source>
+     <maven.compiler.target>11</maven.compiler.target>
+  </properties>
+  <dependencies>
+  	<dependency>
+  		<groupId>junit</groupId>
+  		<artifactId>junit</artifactId>
+  		<version>4.13</version>
+  		<scope>test</scope>
+  	</dependency>
+  </dependencies>
 </project>
